Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-33193

Locator misbehaves with TAB on autocomplete.

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P2: Important P2: Important
    • Qt Creator 18.0.0
    • Qt Creator 17.0.0
    • All Other Issues
    • None
    • Linux/Wayland
    • 0bf614e92 (17.0), 9d95525f1 (master)

      The widget that is called the "Locator" allows hitting the keyboard shortcut "Ctrl+K" to open and the typing things like a filename or 'm method' to open stuff in the editor.

      Since version 17 there is a subtle behavior change that I would consider a regression.

      In for instance QtCore, hit the shortcut and start typing something like qtext. Which would give you a bunch of filenames to open in the popup.
      To be exact, there are two widgets interacting. It is a popup with a listview of results, and there is the textfield where I'm typing.

      There are universally two ways to iterate over the popup of results, either you use the arrow keys on the keyboard, or you use the tab and shift tab keys.
      This worked great in QtCreator 16.0
      This no longer works in QtCreator 17.0

      In QtCreator 17, hitting tab completes the auto-complete and copies the text from the current item of the popup-list to the textfield. Which means that the textfield now no longer matches anything except the current item, changing the list to only have one item.

      When hitting tab / shift-tab I expect to navigate the list of matches that are shown in the popup. The list-content should be unchanged. This should be identical to using the up/down keys, which I don't use since they are much further away.

      What I get instead is that hitting tab changes the popup by essentially selecting the current item of the match-list. Making the match list become a 1 item list.

        For Gerrit Dashboard: QTCREATORBUG-33193
        # Subject Branch Project Status CR V

            con Eike Ziller
            tomz Tom Zander
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes