Locator: Add a setting for tab completion

Add a setting
    [Locator]
    UseTabCompletion=false
for disabling tab completion, going back to the select next/previous
behavior for tab/shift+tab from earlier versions.
GUI for that added in QtC 18.

Amends 08cd201e71fd930fecca022779d1943ce870db8a

Task-number: QTCREATORBUG-33193
Change-Id: I2416400a252e5078061b56740adc59820e82453c
Reviewed-by: David Schulz <david.schulz@qt.io>
Reviewed-by: Mitch Curtis <mitch.curtis@qt.io>